# crud-appgui

./: .env  Cargo.toml  README.md  properties.sqlite
migrations/2023-05-09-183551_create_property/: down.sql  up.sql
src/: application.rs  main.rs  models.rs  repository.rs  schema.rs  service.rs
