[package]
name = "appgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk={ version = "1.4.3"}
fltk-table="0.3.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
diesel = { version = "2.0.4", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = "1.3.2"
